@@ -3,7 +3,6 @@ package no.nav.foreldrepenger.behandling.revurdering.etterkontroll;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
@@ -80,6 +79,6 @@ public class EtterkontrollRepository {
                 .map(Fagsak::getId)
                 .map(behandlingRepository::finnSisteAvsluttedeIkkeHenlagteBehandling)
                 .flatMap(Optional::stream)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
